...
                shape = RoundedCornerShape(12.dp),
                color = MaterialTheme.colorScheme.primaryContainer
            ) {
                IconButton(onClick = onStop) {
                    Icon(
                        painter = painterResource(id = R.drawable.stop_icon),
                        contentDescription = "Stop playing",
                        tint = MaterialTheme.colorScheme.onPrimaryContainer,
                        modifier = Modifier.size(24.dp)
                    )
                }
            }
        }
...
                Icon(
                    painter = painterResource(
                        id = if (playBackState == NamesOfAllahViewModel.PlaybackState.PLAYING)
                            R.drawable.pause_icon else R.drawable.play_icon
                    ),
                    contentDescription = if (playBackState == NamesOfAllahViewModel.PlaybackState.PLAYING)
                        "Pause playing" else "Play",
                    tint = MaterialTheme.colorScheme.onPrimaryContainer,
                    modifier = Modifier.size(24.dp)
                )
            }
        }
    }
...
