...


    const val TEST_TAG_PRAYER_TRACKER = "Prayer Tracker"
    const val TEST_TAG_CALENDER = "Calender"
    const val TEST_TAG_TASBIH_LIST = "Tasbih List"
    const val TEST_TAG_TASBIH = "Tasbih"
    const val TEST_TAG_NAMES_OF_ALLAH = "Names of Allah"
    const val TEST_TAG_CHAPTERS = "Chapters"
    const val TEST_TAG_CHAPTER = "Chapter"


    //logging tags
    private const val TAG = "Nimaz"
...
